# thaihuynh.xyz

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  upload-webdata.sh
blog/: _config.yml  about.md  contact.md
blog/_site/: 404.html  feed.xml  index.html
blog/_site/about/: index.html
blog/_site/assets/: main-dark.css.map  main-light.css.map  main.css.map
blog/_site/contact/: index.html
blog/_site/jekyll/update/2020/02/15/: welcome-to-jekyll.html
docs/: 404.html  Gemfile  _config.yml  feed.xml  index.html  index.md
docs/_posts/: 2020-02-15-welcome-to-jekyll.md  2020-02-29-web-server.md  2020-02-29-website.md
docs/_site/: feed.xml  index.html
docs/_site/about/: index.html
docs/_site/assets/: main.css.map
docs/_site/jekyll/update/2020/02/15/: welcome-to-jekyll.html
docs/about/: index.html
docs/assets/: main-dark.css.map
docs/contact/: index.html
docs/jekyll/update/2020/02/15/: welcome-to-jekyll.html
res/: index.html
res/css/: style.css
res/favorites/: privacypolicy.htm  privacypolicy.html
res/mdl-template-portfolio/: about.html
src/: main.c
src/model/: connection_info.h  http_result.h
src/service/: URLRouter.c  URLRouter.h
src/util/: DArray.c  DArray.h  HMap.c  HMap.h  TSTree.c  TSTree.h  backend_util.c  backend_util.h  dbg.h  util.h
